--- a/mix_server/static/index.html
+++ b/mix_server/static/index.html
@@ -8,7 +8,7 @@
     <div style="font-size: 36px;">Bienvenue!</div>
     <img src="cat.jpg" alt="Cat" style="padding: 24px 0px 24px 0px;">
     <br>
-    <a href="info.html">Go to info</a>
+    <a href="stats.html">Go to info</a>
 </body>
 
 </html>
